hard-gists/8b1502a49d8b20a6ae70/run.log
=== Docker Run Log for 8b1502a49d8b20a6ae70 ===
Started at: Mi 29. Okt 18:07:42 CET 2025

[2025-10-29 18:07:42] START: Running container for 8b1502a49d8b20a6ae70
[2025-10-29 18:07:42] SUCCESS: Container 5328c8d4c1710434339155dc6fb730ee816aff0e9a4b83dac9f3ef532e6e793a started for 8b1502a49d8b20a6ae70
=== Container logs for 8b1502a49d8b20a6ae70 ===
  File "/snippet.py", line 152
    print print_result(pkgs)
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8b1502a49d8b20a6ae70 ===
[2025-10-29 18:07:44] INFO: Container 5328c8d4c1710434339155dc6fb730ee816aff0e9a4b83dac9f3ef532e6e793a has stopped
